fixed overlay-overflow-animation

--- a/styles/board_overlay.css
+++ b/styles/board_overlay.css
@@ -78,12 +78,16 @@
   max-width: 95%;
   max-height: 95%;
   border-radius: 30px;
-  transform: translate(200%, 0);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(calc(100vw - 50%) , -50%);
+
   transition: transform 250ms linear;
 }
 
 .add-task-overlay-wrap.overlay-open {
-  transform: translate(0, 0);
+  transform: translate(-50%, -50%);
 }
 
 .close-icon-add-task-overlay-wrap {
