--- a/styles/desktop_template.css
+++ b/styles/desktop_template.css
@@ -199,6 +199,10 @@ nav > a:hover {
   cursor: pointer;
 }
 
+.disable-scroll{
+  overflow: hidden;
+}
+
 @media screen and (max-width: 820px) {
   .page {
     grid-template-columns: auto;
